Fix calculation for "group only when full".

* Fixes potentially miscalculating the threshold with "Force
  Rows" enabled.
* Fixes potentially being left with a stale threshold in the
  group manager due to a race condition between reacting to
  an applet geometry change and recalculating the threshold.
* The calculated threshold was generally off by one thanks to
  misinterpreting the libtaskmanager API naming.

BUG:325163